adding Data and fixing loadData